# simple_calculator

./: Cargo.toml  README.md
deliver/: Cargo.toml
deliver/src/: lib.rs
src/: lexer.rs  lib.rs  main.rs  parser.rs  statement.rs  token.rs  vm.rs
tests/: calculations.rs  parser.rs
