[package]
name = "simple_calculator_cmd"
version = "0.1.1"
edition = "2021"
authors = ["Kevin Chen <kevin@chenbc.me>"]
description = "command line simple calculator and library"
repository = "https://github.com/chikaku/simple_calculator_cmd"
documentation = "https://docs.rs/simple_calculator_cmd"
readme = "README.md"
license = "MIT"

[dependencies]
simple_calculator_deliver = { path = "deliver", version = "0.1.1" }

[workspace]
members = [
    "deliver",
]
